# CVoxelEngine

./: .gitmodules  CMakeLists.txt  main.c  readme.md  settings.ini
assets/: blocks.json  structures.json
assets/blocks/: grass.json  sand.json  schema.json  water.json
assets/structures/: tree.json
assets/ui/: UIInventorySlot.c  UIInventorySlot.h
include/: AABB.h  Block.h  BlockType.h  Chunk.h  ChunkManager.h  Collisions.h  CommonVertices.h  Constants.h  FaceOrientation.h  Geometry.h  InputManager.h  Inventory.h  PerlinNoise.h  Player.h  Rigidbody.h  Settings.h  Shader.h  ShaderManager.h  ShaderType.h  Skybox.h  Structure.h  TextureManager.h  Vector.h  WindowManager.h  World.h  stb_image.h  thpool.h
include/Engine/: Engine.h  Time.h  Utils.h
include/VoxelEngine/: Block.h  BlockId.h  BlockProperty.h  VoxelEngine.c  VoxelEngine.h
include/managers/: GlyphManager.h  SettingsManager.h  ShaderManager.h  TextureManager.h  WindowManager.h
include/ui/: BlockStack.h  CharGlyph.h  Hotbar.h  Inventory.h  UIHotbar.h  UIInventory.h  UIInventorySlot.h  UIManager.h  UISprite.h  UIStack.h  UIText.h
libs/: Vector.c  Vector.h  hashmap.c  thpool.c
shaders/: default.fsh  default.vsh  skybox.vsh  ui.fsh  ui.vsh  ui_3d.fsh  ui_3d.vsh  ui_default.fsh  ui_default.vsh  ui_text.fsh  ui_text.vsh
src/: Block.c  Chunk.c  ChunkManager.c  Collisions.c  InputManager.c  Inventory.c  PerlinNoise.c  Player.c  Rigidbody.c  Settings.c  Shader.c  ShaderManager.c  Skybox.c  Structure.c  TextureManager.c  Vector.c  WindowManager.c  World.c  hashmap.c  thpool.c
src/Engine/: Engine.c  Settings.c  Utils.c
src/managers/: GlyphManager.c  InputManager.c  SettingsManager.c  ShaderManager.c  TextureManager.c  WindowManager.c
src/ui/: Hotbar.c  Inventory.c  UIHotbar.c  UIInventory.c  UIInventorySlot.c  UIItem.c  UIItem.h  UIManager.c  UISprite.c  UIStack.c  UIText.c
ui/include/: Hotbar.h  UIManager.h
ui/src/: Hotbar.c  UIManager.c  UISprite.c
